--- a/klant/logboek.html
+++ b/klant/logboek.html
@@ -9,7 +9,8 @@
 <p>Week 1: Nog geen klant.</p>
 <p>Week 2: Geen klant.</p>
 <p>Week 3: Geen klant.</p>
-<p>Week 4: Klant. CC Colomba Kortenberg.</p>
+<p>Week 4: Klant. Gemeenschapscentrum Colomba Kortenberg.</p>
+<p>Dit is een centrum waar verschillende evenementen kunnen georganiseerd worden. Recent was dit de locatie om te stemmen.</p>
 
 
 </body>
