--- a/oefeningen/Meurrens_Sam.html
+++ b/oefeningen/Meurrens_Sam.html
@@ -8,8 +8,8 @@
 <h1>Meurrens Sam</h1>
 <h2>Hobby's</h2>
 <p>Het meeste van mijn tijd spendeer ik aan games en videos, maar maak af en toe ook tijd voor te joggen of een uur of twee te gaan fietsen.</p>
-<img>
 <img src="https://prosteps.cloudimg.io/s/cdn/x/https://tilroy.s3-eu-west-1.amazonaws.com/254/content/wallerang12.jpg" WIDTH="240" HEIGHT="280">
+    <img src="img/fietsgroot.jpeg">
 
 </body>
 </html>
