--- a/oefeningen/Meurrens_Sam.html
+++ b/oefeningen/Meurrens_Sam.html
@@ -7,9 +7,10 @@
 
 <h1>Meurrens Sam</h1>
 <h2>Hobby's</h2>
-<p>Het meeste van mijn tijd spendeer ik aan games en videos, maar maak af en toe ook tijd voor te joggen of een uur of twee te gaan fietsen.</p>
-<img src="https://prosteps.cloudimg.io/s/cdn/x/https://tilroy.s3-eu-west-1.amazonaws.com/254/content/wallerang12.jpg" WIDTH="240" HEIGHT="280">
-    <img src="img/fietsgroot.jpeg">
+    <p>Het meeste van mijn tijd spendeer ik aan <a href="hobby1.html">games en het bekijken van videos</a>, maar maak af en toe ook tijd voor te <a href="hobby2.html">joggen of een uur of twee te gaan fietsen.</a></p>
+<a href="img/grootfiets.jpeg">
+  <img src="https://prosteps.cloudimg.io/s/cdn/x/https://tilroy.s3-eu-west-1.amazonaws.com/254/content/wallerang12.jpg" alt="Fiets" WIDTH="240" HEIGHT="280">
+</a>
 
 </body>
 </html>
