--- a/klant/Tabel.html
+++ b/klant/Tabel.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
-<style>
+<title></title>
+    <meta charset="UTF-8">
+    <style>
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
 }
-</style>
-<title>Interview</title>
+th, td {
+    padding: 5px;
+}
+    </style>
 </head>
 <body>
-
-<h1>Interview</h1>
-<p>Gemeenschaps centrum waar verschillende evenementen plaatsvinden. Bv: Carnaval, Stemmen,...</p>
-<p>Op de site wordt verwacht dat het gebouw kort wordt voorgesteld (De zalen, de tarieven, het terrein) en de evenelenten dat hier plaatsvinden. Foto materiaal mag zelf genomen worden of foto's dat openbaar staan.</p>
-
-<p>Er moet een homepagina zijn met een menu waarmee je naar andere pagina's kunt gaan. Het logo van Kortenberg moet zichtbaar zijn op elke pagina en de kleuren wit en lichtblauw moeten dominant zijn. Tekst en informatie hoef ik niet zelf te schrijven.</p>
-
+   
 <table style="width:100%">
   <tr>
     <th>Opdracht</th>
@@ -83,5 +81,7 @@ table, th, td {
 </tr>
 </table>
     
+
+
 </body>
 </html>
