--- a/klant/logboek.html
+++ b/klant/logboek.html
@@ -11,6 +11,8 @@
 <p>Week 3: Geen klant.</p>
 <p>Week 4: Klant. Gemeenschapscentrum Colomba Kortenberg.</p>
 <p>Dit is een centrum waar verschillende evenementen kunnen georganiseerd worden. Recent was dit de locatie om te stemmen.</p>
+<p>Willy Trappeniers</p>
+<p>gccolomba@kortenberg.be</p>
 
 
 </body>
