--- a/klant/Tabel.html
+++ b/klant/Tabel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-<title></title>
+<title>Tabel</title>
     <meta charset="UTF-8">
     <style>
 table, th, td {
