--- a/klant/interview.html
+++ b/klant/interview.html
@@ -18,7 +18,7 @@ table, th, td {
 <p>Er moet een homepagina zijn met een menu waarmee je naar andere pagina's kunt gaan. Het logo van Kortenberg moet zichtbaar zijn op elke pagina en de kleuren wit en lichtblauw moeten dominant zijn. Tekst en informatie hoef ik niet zelf te schrijven.</p>
 
 <h2>Tabel</h2>
-    <p>Een link naar de pagina met de vereisten voor de website <a href="Tabel.html">hier.</a></p>
+    <p><a href="Tabel.html">Hier</a> is een link naar de pagina met de vereisten voor de website.</p>
 <h2>Lijst</h2>
     <p><a href="Lijst.html">Hier</a> is een geordende lijst van de gevraagde elementen van meest belangrijk naar minder belangrijk.</p>
 
