--- a/Site/tarievenGCC.html
+++ b/Site/tarievenGCC.html
@@ -30,7 +30,7 @@
      <div class="container">
          <article>
              <h1 class="page-title">Huurtarieven G.C. Colomba</h1>
-             <img src='../img/landschap.jpg'>
+             <img src="../img/landschap.jpg">
              
             
         </article>
